--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,10 +5,10 @@ import site from "../data/site.json";
 const BASE = import.meta.env.BASE_URL;
 
 const gallery = [
-  `${BASE}images/activities/demo.webp`,
-  `${BASE}images/activities/demo.webp`,
-  `${BASE}images/activities/demo.webp`,
-  `${BASE}images/activities/demo.webp`,
+  `${BASE}images/activities/PONGAN AQUI LA HP IMAGEN QUE SE LES DE LA GANA SOLO ES CTRL C CTRL V GRACIAS TKM.webp`,
+  `${BASE}images/activities/PONGAN AQUI LA HP IMAGEN QUE SE LES DE LA GANA SOLO ES CTRL C CTRL V GRACIAS TKM.webp`,
+  `${BASE}images/activities/PONGAN AQUI LA HP IMAGEN QUE SE LES DE LA GANA SOLO ES CTRL C CTRL V GRACIAS TKM.webp`,
+  `${BASE}images/activities/PONGAN AQUI LA HP IMAGEN QUE SE LES DE LA GANA SOLO ES CTRL C CTRL V GRACIAS TKM.webp`,
 ];
 
 // Ahora es "Contáctanos"
