--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,10 +5,16 @@ import site from "../data/site.json";
 const BASE = import.meta.env.BASE_URL;
 
 const gallery = [
-  `${BASE}images/activities/PONGAN AQUI LA HP IMAGEN QUE SE LES DE LA GANA SOLO ES CTRL C CTRL V GRACIAS TKM.webp`,
-  `${BASE}images/activities/PONGAN AQUI LA HP IMAGEN QUE SE LES DE LA GANA SOLO ES CTRL C CTRL V GRACIAS TKM.webp`,
-  `${BASE}images/activities/PONGAN AQUI LA HP IMAGEN QUE SE LES DE LA GANA SOLO ES CTRL C CTRL V GRACIAS TKM.webp`,
-  `${BASE}images/activities/PONGAN AQUI LA HP IMAGEN QUE SE LES DE LA GANA SOLO ES CTRL C CTRL V GRACIAS TKM.webp`,
+  `${BASE}images/activities/carrusel.webp`,
+  `${BASE}images/activities/carrusel1.webp`,
+  `${BASE}images/activities/carrusel2.webp`,
+  `${BASE}images/activities/carrusel3.webp`,
+  `${BASE}images/activities/carrusel4.webp`,
+  `${BASE}images/activities/carrusel5.webp`,
+  `${BASE}images/activities/carrusel6.webp`,
+  `${BASE}images/activities/carrusel7.webp`,
+  
+  
 ];
 
 // Ahora es "Contáctanos"
