--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,7 @@ const gallery = [
   `${BASE}images/activities/carrusel5.webp`,
   `${BASE}images/activities/carrusel6.webp`,
   `${BASE}images/activities/carrusel7.webp`,
+  `${BASE}images/activities/SID.webp`,
   
   
 ];
